[package]
name = "pii-shield"
version = "0.1.0"
description = "Automatically detect and anonymize sensitive information before pasting into AI assistants"
authors = ["PII Shield Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "pii_shield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process", "io-util"] }
arboard = "3.4"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
regex = "1.10"

# Platform-specific dependencies for active window detection
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
